# Lunabotics_ROS

./: .gitignore  CMakeLists.txt  README.md  comm.launch  emptyworld.txt  gazebo.urdf  launch  launch_min  lunabotics  lunabotics.launch  lunarena.txt  lunarena2.txt  lunarena3.txt  lunarena4.txt  mainpage.dox  manifest.xml  moon.txt  openworld.txt  setup.bash  stage.world  world.txt
gazebo/: CMakeLists.txt  Installation tutorial.desktop  compile_plugin.sh  compile_plugins  relaunch_gazebo  ros_model_plugin.cc
gazebo/models/connector/: connector.sdf  model.config
gazebo/models/elias/: elias.material  elias.sdf  elias_new.sdf  model.config  monkey.dae
gazebo/models/elias/materials/scripts/: elias.material
gazebo/models/elias/meshes/: bucket.dae  collector.dae  dumper.dae
gazebo/models/hokuyo/: hokuyo.sdf  model.config
gazebo/models/lunarena/: lunarena.sdf  model.config
gazebo/models/my_robot/: model.config  model.sdf
gazebo/models/pioneer2dx/: model.config  pioneer2dx.sdf
gazebo/models/roomba/: model.config  roomba_model.sdf  roomba_model.urdf
gazebo/models/sandwich/: model.config  sandwich.sdf
gazebo/models/slope/: model.config  slope.sdf
gazebo/models/sparce_obstacles/: model.config  sparce_obstacles.sdf
gazebo/models/sparce_obstacles/meshes/: sparce.dae  sparce2.dae
gazebo/models/terrain/: model.config  terrain.sdf
gazebo/models/terrain/meshes/: terrain.dae
gazebo/models/wheel/: model.config  wheel.sdf
gazebo/models/wheel/meshes/: wheel.dae
gazebo/src/: AllWheelSteeringPlugin.cpp  AllWheelSteeringPlugin.h  ClockServerPlugin.cpp  ClockServerPlugin.h  DiffDrivePlugin.cc  DiffDrivePlugin.hh  GazeboUtils.cpp  GazeboUtils.h  LunaboticsDiffDrivePlugin.cpp  LunaboticsDiffDrivePlugin.h  LunaboticsLidarPlugin.cpp  LunaboticsLidarPlugin.h  LunaboticsOdometryPlugin.cpp  LunaboticsOdometryPlugin.h  MotorControlPlugin.cc  MotorControlPlugin.h  OrigDiffDrivePlugin.cc  OrigDiffDrivePlugin.hh  PIDController.cpp  PIDController.h  TransformServerPlugin.cpp  TransformServerPlugin.h  erratic.cpp  erratic.h  luna_gazebo_odometry_plugin.cpp  luna_gazebo_odometry_plugin.h  ros_model_plugin.cc
gazebo/worlds/: cubic.sdf  cubic.world  editor.sdf  empty.world  heightmap.sdf  lunarena.sdf  moon.sdf  moon2.sdf  slope.sdf  test.sdf  test.world
msg/: AllWheelCommon.msg  AllWheelState.msg  AllWheelStateROS.msg  AllWheelSteering.msg  BoolValue.msg  Connection.msg  Control.msg  ControlMode.msg  ControlParams.msg  CrabControl.msg  CurveTopic.msg  Emergency.msg  Goal.msg  ICRControl.msg  JointPositions.msg  PID.msg  PathFollowingTelemetry.msg  PathTopic.msg  RobotGeometry.msg  State.msg  Telemetry.msg  Teleoperation.msg  Vision.msg  Wheel.msg
src/: .gitignore  CMakeLists.txt  Cartographer.cpp  Cartographer.h  MechInterfaceNode.cpp  MechInterfaceNode.h  MotionControlNode.cpp  MotionControlNode.h  NodeAssistant.cpp  NodeAssistant.h  ROSNode.cpp  ROSNode.h  coding.cpp  coding.h  luna_aut_gw.cpp  luna_driver.cpp  luna_fear.cpp  luna_gui_gw.cpp  luna_gui_listener.cpp  luna_mech_gw.cpp  luna_navigator.cpp  luna_pilot.cpp  luna_planner.cpp  luna_slam.cpp  topics.h  types.cpp  types.h  utils.cpp  utils.h
src/control/: AllWheelPredefinedCmdController.cpp  AllWheelPredefinedCmdController.h  CMakeLists.txt  PIDController.cpp  PIDController.h  control.h  utils.cpp  utils.h
src/geometry/: BezierCurve.cpp  BezierCurve.h  CMakeLists.txt  DoubleLookAhead.cpp  DoubleLookAhead.h  PID.cpp  PID.h  PIDGeometry.cpp  PIDGeometry.h  PathFollowingGeometry.cpp  PathFollowingGeometry.h  allwheel.cpp  allwheel.h  basic.cpp  basic.h  geometry.h
src/lunabotics/msg/: _Autonomy.py  _BoolValue.py  _Control.py  _Emergency.py  _Telemetry.py  _Vision.py  __init__.py
src/motion/: pid.cpp  pid.h
src/planning/: CMakeLists.txt  Trajectory.cpp  Trajectory.h  a_star_graph.cpp  a_star_graph.h  a_star_node.cpp  a_star_node.h  bezier_smooth.cpp  bezier_smooth.h  planning.h
src/protos/: AllWheelControl.proto  AllWheelState.proto  Point.proto  SteeringModeType.proto  Telecommand.proto  Telemetry.proto  Twist.proto
